--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "alurapic",
+  "name": "e-commerce",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node serve.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.12.3",
-    "express": "^4.12.3",
-    "nedb": "^1.1.2"
+    "express": "^4.12.3"
   }
 }
